Fix project and contact spacing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,3 +5,6 @@
 .bi-github {
     margin-right: .5rem;
 }
+.bi-envelope {
+    margin-right: .3rem;
+}
